# frankensqlite

./: .gitignore  .ubsignore  AGENTS.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1.md  COMPREHENSIVE_SPEC_FOR_FRANKENSQLITE_V1_CODEX.md  Cargo.toml  PLAN_TO_PORT_SQLITE_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  deploy.sh  package.json  tasks.md  visualization_of_the_evolution_of_the_frankensqlite_specs_document_from_inception.html
.beads/: issues.jsonl
crates/fsqlite-cli/: Cargo.toml
crates/fsqlite-cli/src/: main.rs
crates/fsqlite-harness/: Cargo.toml  file:memdb_punishment?mode=memory&cache=shared  file:memdb_punishment?mode=memory&cache=shared-wal  file:memdb_punishment_3?mode=memory&cache=shared  file:memdb_punishment_3?mode=memory&cache=shared-wal  file:memdb_punishment_4?mode=memory&cache=shared  file:memdb_punishment_4?mode=memory&cache=shared-wal
crates/fsqlite-harness/conformance/: core_sql_golden_blake3.json
crates/fsqlite-harness/src/: bloodstream.rs  ci_coverage_gate.rs  ci_gate_matrix.rs  confidence_gates.rs  corpus_ingest.rs  cross_process_crash_harness.rs  differential_v2.rs  drift_monitor.rs  durability_matrix.rs  e2e_log_schema.rs  e2e_traceability.rs  eprocess.rs  evidence_index.rs  execution_waves.rs  extension_parity_matrix.rs  failure_bundle.rs  fault_vfs.rs  forensics_navigator.rs  impact_graph.rs  lane_selector.rs  lib.rs  log.rs  log_schema_validator.rs  metamorphic.rs  oracle.rs  parity_invariant_catalog.rs  perf_loop.rs  performance_regression_detector.rs  planner_vdbe_closure.rs  release_certificate.rs  replay_harness.rs  replay_triage.rs  scheduler.rs  score_engine.rs  soak_executor.rs  soak_profiles.rs  supervision.rs  t6sv2_checklist.rs  tcl_conformance.rs  test_diagnostics.rs  (+5 more)
crates/fsqlite-harness/tests/: bd_106dk_swiss_tables_index.rs  bd_14vp7_6_morsel_dispatcher.rs  bd_14vp7_7_vectorized_vs_interpreter_benchmark.rs  bd_19u_3_provenance_semirings.rs  bd_19u_4_nitrosketch_telemetry.rs  bd_19u_7_differential_privacy.rs  bd_1as_5_planner_correctness.rs  bd_1dp9_6_6_alien_contract_pack_enforcement.rs  bd_1dp9_7_3_ci_gate_matrix.rs  bd_1dp9_7_4_replay_triage.rs  bd_1dp9_7_5_parity_evidence_matrix.rs  bd_1dp9_7_6_log_schema_validator.rs  (+88 more)
crates/fsqlite-vfs/: Cargo.toml  README.md
(+317 files in other folders)
