[package]
name = "fsqlite-vfs"
version = "0.1.2"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["linux-uring-fs"]
# Linux io_uring backend powered by `uring-fs` (existing default path).
linux-uring-fs = ["dep:uring-fs"]
# Linux io_uring backend powered by `asupersync` for A/B backend validation.
linux-asupersync-uring = ["dep:asupersync"]

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
pollster = "0.4.0"
uring-fs = { version = "1.4.0", optional = true }
asupersync = { workspace = true, features = ["io-uring"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
advisory-lock = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
